--- a/apache-jmeter/plan/test-taurus.yml
+++ b/apache-jmeter/plan/test-taurus.yml
@@ -6,5 +6,9 @@ execution:
   ramp-up: 5s
   iterations: 3
 modules:
+  console:
+    disable: true
   consolidator:
     generalize-labels: false
+reporting:
+  - module: console
