--- a/apache-jmeter/plan/test.yml
+++ b/apache-jmeter/plan/test.yml
@@ -6,9 +6,10 @@ execution:
 
   scenario:
     think-time: 0.75
-    requests:
-      - http://blazedemo.com/
-      - http://blazedemo.com/vacation.html
+    script: /Users/pcharoen/Documents/workspace/hydranorth-load-testing/apache-jmeter/plan/test-taurus.jmx
+#    requests:
+#      - http://blazedemo.com/
+#      - http://blazedemo.com/vacation.html
 
 modules:
   jmeter:
